<resources>
    <!--Default-->
    <string name="version">Ver 1.0</string>
    <string name="app_name">HospitalBill</string>
    <string name="all">Tất cả</string>
    <!--Splash-->
    <string name="splash_label">Hệ thống quản lý thu ngân bệnh viên</string>
    <string name="splash_loading">Đang tải dữ liệu...</string>

    <!--Login-->
    <string name="login_label">Đăng nhập để tiếp tục:</string>
    <string name="login_username">Tên đăng nhập:</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_perform">Đăng nhập</string>
    <string name="login_user_empty">Tên đăng nhập không được để trống!</string>
    <string name="login_pass_empty">Mật khẩu không được để trống!</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="login_fail">Đăng nhập thất bại!</string>
    <!--Doctor-->
    <string name="doctor_tab_user">Tài khoản</string>
    <string name="doctor_tab_search">Tìm kiếm</string>
    <string name="doctor_tab_record">Bệnh án</string>
    <string name="doctor_tab_setting">Cài đặt</string>
    <string name="doctor_header_position">Chức vụ:</string>
    <string name="doctor_header_part">Khoa/Viện:</string>
    <string name="doctor_header_session">Ca trực:</string>
    <string name="doctor_header_phone">SĐT:</string>

    <!--Search-->
    <string name="search_header_advance">Tìm kiếm nâng cao</string>
    <string name="search_department">Khoa:</string>
    <string name="search_sub_department">Bệnh lý:</string>
    <string name="search_btn_title">Duyệt</string>
    <string name="search_result">Kết quả tìm kiếm:</string>

    <!--Record-->
    <string name="record_filter">Lọc theo:</string>
    <string name="record_filter_all">Tất cả</string>
    <string name="record_filter_id">Id</string>
    <string name="record_filter_doctor">Bác sĩ</string>
    <string name="record_filter_perform">Duyệt</string>
    <string-array name="record_filter_list">
        <item>@string/record_filter_all</item>
        <item>@string/record_filter_id</item>
        <item>@string/record_filter_doctor</item>
    </string-array>

    <string name="record_header_id">Id</string>
    <string name="record_header_time">Thời gian</string>
    <string name="record_header_doctor">Bác sĩ</string>
    <string name="record_header_note">Chú thích</string>

    <!--NewRecord-->
    <string name="new_record_label">Bệnh ánh mới</string>
    <string name="new_record_doctor">Bác sĩ:</string>
    <string name="new_record_patient">Bệnh nhân:</string>
    <string name="new_record_note">Chú thích:</string>
    <string name="new_record_problem">Bệnh án:</string>
    <string name="new_record_add"></string>

    <!--RecordQR-->
    <string name="newcord_qr_title">Sử dụng mã này tại thu ngân để thanh toán</string>
    <!--RecordProblem-->
    <string name="record_problem_amount">SL:</string>

    <!--RecorDetail-->
    <string name="record_detail_title">Chi tiết bệnh án</string>

    <!--Staff-->
    <string name="staff_user">Tài khoản</string>
    <string name="staff_bill">Hóa đơn</string>
    <string name="staff_setting">Cài đặt</string>

    <!--Setting-->
    <string name="setting_header_version">Phiên bản</string>
    <string name="setting_header_logout">Đăng xuất</string>

    <!--StaffBill-->
    <string name="bill_search">Tìm kiếm</string>
    <string name="bill_header">Danh sách hóa đơn:</string>
    <string name="bill_header_id">Id</string>
    <string name="bill_header_time">Thời gian</string>
    <string name="bill_header_staff">Nhân viên</string>
    <string name="bill_header_note">Chú thích</string>

    <!--NewBill-->
    <string name="newbill_label">Hóa đơn mới</string>
    <string name="newbill_header_staff">Nhân viên:</string>
    <string name="newbill_header_note">Ghi chú:</string>
    <string name="newbill_header_insurance">Bảo hiểm:</string>
    <string name="newbill_header_insurance_id">Mã bảo hiểm:</string>
    <string name="newbill_header_insurance_percent">Tỉ lệ giảm giá:</string>
    <string name="newbill_header_insurance_check">Check</string>
    <string name="newbill_header_record">Bệnh án:</string>
    <string name="newbill_header_money_sum">Tổng cộng:</string>
    <string name="newbill_record_confirm">Xác nhận</string>
    <string name="newbill_problem_id">Id</string>
    <string name="newbill_problem_name">Tên</string>
    <string name="newbill_problem_count">Số lượng</string>
    <string name="newbill_problem_price">Đơn giá</string>
    <string name="newbill_insurance_available">Có</string>
    <string name="newbill_record_empty">Mã bệnh án ko được để trống!</string>
    <string name="newbill_insurance_not_available">Không</string>
    <string name="newbill_done">Đã thanh toán!</string>
    <string name="newbill_failed">Có vấn đề xảy ra khi thanh toán, hãy thử lại!</string>

    <!--Record Scan-->
    <string name="record_scan_label">Quét mã bệnh án</string>

    <!--BillDetail-->
    <string name="bill_detail_label">Chi tiết hóa đơn</string>
</resources>
