<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgr_color"
    android:orientation="horizontal"
    android:paddingLeft="3dp"
    android:paddingRight="3dp">

    <!--ID-->
    <LinearLayout
        android:id="@+id/bill_id_layout"
        style="@style/Record.HeaderItem"
        android:layout_weight="1"
        android:clickable="true">

        <TextView
            style="@style/Record.ItemText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bill_header_id" />

        <ImageView
            android:id="@+id/record_id_arrow"
            android:layout_width="@dimen/record_item_arrow_size"
            android:layout_height="@dimen/record_item_arrow_size"
            android:src="@drawable/ic_arrow_down" />
    </LinearLayout>

    <include layout="@layout/vertical_line" />
    <!--Time-->
    <LinearLayout
        style="@style/Record.HeaderItem"
        android:layout_weight="1.5">

        <TextView
            style="@style/Record.ItemText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bill_header_time" />

        <ImageView
            android:id="@+id/record_time_arrow"
            android:layout_width="@dimen/record_item_arrow_size"
            android:layout_height="@dimen/record_item_arrow_size"
            android:src="@drawable/ic_arrow_down" />
    </LinearLayout>

    <include layout="@layout/vertical_line" />
    <!--Doctor-->
    <LinearLayout
        android:id="@+id/record_doctor_layout"
        style="@style/Record.HeaderItem"
        android:layout_weight="1.5">

        <TextView
            style="@style/Record.ItemText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bill_header_staff" />

        <ImageView
            android:id="@+id/record_doctor_arrow"
            android:layout_width="@dimen/record_item_arrow_size"
            android:layout_height="@dimen/record_item_arrow_size"
            android:src="@drawable/ic_arrow_down" />
    </LinearLayout>

    <include layout="@layout/vertical_line" />
    <!--Note-->
    <LinearLayout
        android:id="@+id/record_note_layout"
        style="@style/Record.HeaderItem"
        android:layout_weight="2.1">

        <TextView
            style="@style/Record.ItemText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bill_header_note" />

        <ImageView
            android:id="@+id/record_note_arrow"
            android:layout_width="@dimen/record_item_arrow_size"
            android:layout_height="@dimen/record_item_arrow_size"
            android:src="@drawable/ic_arrow_down" />
    </LinearLayout>
</LinearLayout>