<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgr_color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.Toolbar" />

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="3dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_stroke_shape"
        android:orientation="vertical"
        android:padding="10dp">
        <!--Staff Info-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/NewBill.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/newbill_header_staff" />

            <TextView
                android:id="@+id/newbill_staff_name"
                style="@style/NewBill.Item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <include layout="@layout/horizontal_line" />

        <!--Note-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/NewBill.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/newbill_header_note" />

            <EditText
                android:id="@+id/newbill_note"
                style="@style/NewBill.Item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <include layout="@layout/horizontal_line" />

        <!--Insurance-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/NewBill.Header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/newbill_header_insurance" />

                <RadioGroup
                    android:id="@+id/newbill_insurance_radio_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/insurance_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/color_white"
                        android:text="@string/newbill_insurance_available"
                        android:textColor="@color/color_white" />


                    <RadioButton
                        android:id="@+id/insurance_not_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/color_white"
                        android:checked="true"
                        android:text="@string/newbill_insurance_not_available"
                        android:textColor="@color/color_white" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <!--Insurance Info-->
        <LinearLayout
            android:id="@+id/insurance_info_layout"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Insurance ID-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/NewBill.Header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/newbill_header_insurance_id" />

                <EditText
                    android:id="@+id/insurance_id"
                    style="@style/NewBill.Item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/insurance_check_btn"
                    style="@style/NewBill.Item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/round_stroke_shape"
                    android:padding="5dp"
                    android:text="@string/newbill_record_confirm" />
            </LinearLayout>

            <!--Insurance Discount-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/NewBill.Header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/newbill_header_insurance_percent" />

                <TextView
                    android:id="@+id/insurance_percent"
                    style="@style/NewBill.Item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/money_sum_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            style="@style/NewBill.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/newbill_header_money_sum" />

        <TextView
            android:id="@+id/money_sum"
            style="@style/NewBill.Item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <!--Record-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/money_sum_layout"
        android:layout_below="@id/header_layout"
        android:orientation="vertical">
        <!--Import Record-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                style="@style/NewBill.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/newbill_header_record" />

            <EditText
                android:id="@+id/newbill_record_id"
                style="@style/NewBill.Item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <ImageView
                android:id="@+id/newbill_scan_btn"
                android:layout_width="@dimen/newbill_qr_icon_size"
                android:layout_height="@dimen/newbill_qr_icon_size"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_qr_scan" />

            <TextView
                android:id="@+id/record_confirm_btn"
                style="@style/NewBill.Item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/round_stroke_shape"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/newbill_record_confirm" />
        </LinearLayout>

        <!--RecordHeader-->
        <include layout="@layout/bill_problem_header" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/problem_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
